# advent-of-code-2021

./: .clang-format  .gitignore  CMakeLists.txt  README.md
day14/: .gitignore
day14/src/: day14.kt
day16/src/: main.kt
src/day1/: main.cpp
src/day10/: main.cpp
src/day11/: main.cpp
src/day12/: main.cpp
src/day13/: main.cpp
src/day15/: main.cpp
src/day17/: main.cpp
src/day2/: main.cpp
src/day3/: main.cpp
src/day4/: main.cpp
src/day5/: main.cpp
src/day6/: main.cpp
src/day7/: main.cpp
src/day8/: main.cpp
src/day9/: main.cpp
