cmake_minimum_required(VERSION 3.20)
project(2021)

set(CMAKE_CXX_STANDARD 20)

add_executable(day1 src/day1/main.cpp)
add_executable(day2 src/day2/main.cpp)
add_executable(day3 src/day3/main.cpp)
add_executable(day4 src/day4/main.cpp)
add_executable(day5 src/day5/main.cpp)
add_executable(day6 src/day6/main.cpp)
add_executable(day7 src/day7/main.cpp)
add_executable(day8 src/day8/main.cpp)
add_executable(day9 src/day9/main.cpp)
add_executable(day10 src/day10/main.cpp)
add_executable(day11 src/day11/main.cpp)
add_executable(day12 src/day12/main.cpp)
add_executable(day13 src/day13/main.cpp)